<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BinjCover</string>
    <string name="hello_world">Hello world!</string>
    <string name="download_button">Download</string>
    <string name="download_text">Press the button to download music</string>
    <string name="action_settings">Settings</string>
    <string name="blank"></string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_text">Search Results here</string>
    <string name="title_activity_resro_profile">Resro 1</string>
    <string name="find_local">Find A Place Near You NOW</string>
    <string name="chse_frm_blo">-----Or Choose From Below-----</string>
    <string name="resto_head">Resto Home Img</string>
    <string name="txtvw_rest_1">Restautent 1</string>
    <string name="resto_place">Location 1 (hub)</string>
    <string name="title_activity_main_view">Main_view</string>
    <string name="create_table">Create Table And Invite Friends</string>
    <string name="deals">Current Deals Available</string>
    <string name="title_activity_resto_prof2">Resto 2</string>
    <string name="title_activity_create_table">CreateTable</string>
    <string name="title_activity_table_created">TableCreated</string>
    <string name="tbl_created">Table Created Add Friends</string>
    <string name="add_frnds">Add Friends</string>
    <string name="ok">OK</string>
    <string name="loading">Loading ....</string>
    <string name="error">Error!</string>

</resources>