<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@android:color/holo_red_light"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/resto_head_img"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:adjustViewBounds="true"
        android:alpha="0.9"
        android:contentDescription="@string/resto_head"
        android:cropToPadding="true"
        android:fitsSystemWindows="true"
        android:src="@drawable/a" />

    <TextView
        android:id="@+id/textView1"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        android:textSize="40sp"
        android:alpha="0.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/txtvw_rest_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resto_head_img"
        android:layout_alignParentEnd="true"
        android:text="@string/resto_place"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/resto_head_img"
        android:layout_marginTop="21dp"
        android:ellipsize="marquee"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|center_horizontal|fill_vertical"
        android:shadowColor="@android:color/holo_blue_light"
        android:text="@string/create_table"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="14dp"
        android:text="@string/deals"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Gallery
        android:id="@+id/gallery1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView3" />

</RelativeLayout>